--- a/src/main/resources/templates/include/nav.html
+++ b/src/main/resources/templates/include/nav.html
@@ -2,7 +2,7 @@
  	<div class="col-md-12">
         <div class="navbar-header">
 
-            <a href="" class="navbar-brand">SLiPP</a>
+            <a href="/" class="navbar-brand">SLiPP</a>
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
           <i class="glyphicon glyphicon-search"></i>
           </button>
@@ -25,7 +25,7 @@
                   <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
                 </ul>
              </li>
-             <li><a href="./user/form.html"><i class="glyphicon glyphicon-user"></i></a></li>
+             <li><a href="/"><i class="glyphicon glyphicon-user"></i></a></li>
            </ul>
         </div>	
      </div>	
@@ -50,9 +50,9 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="index.html">Posts</a></li>
-                <li><a href="user/login.html" role="button">로그인</a></li>
-                <li><a href="user/form.html" role="button">회원가입</a></li>
+                <li class="active"><a href="/">Posts</a></li>
+                <li><a href="/user/login.html" role="button">로그인</a></li>
+                <li><a href="/user/form.html" role="button">회원가입</a></li>
                 <!--
                 <li><a href="#loginModal" role="button" data-toggle="modal">로그인</a></li>
                 <li><a href="#registerModal" role="button" data-toggle="modal">회원가입</a></li>
