--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="kr">
-{{> /include/header}}
+{{> include/header}}
 	
 	<body>
 
-{{> /include/nav}}
+{{> include/nav}}
 
 <div class="container" id="main">
    <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
@@ -131,6 +131,6 @@
 
 <!-- script references -->
 
-{{> /include/footer}}
+{{> include/footer}}
 	</body>
 </html>
