--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="kr">
-{{> /include/header}}
+{{> include/header}}
 <body>
-{{> /include/nav}}
+{{> include/nav}}
 
 <div class="container" id="main">
    <div class="col-md-10 col-md-offset-1">
@@ -26,6 +26,6 @@
 </div>
 
 <!-- script references -->
-{{> /include/footer}}
+{{> include/footer}}
 	</body>
 </html>
