static code remove

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -16,7 +16,7 @@
               <tbody>
 				{{#userList}}
                 <tr>
-                    <th scope="row">{{-index}}</th> <td>{{userId}}</td> <td>{{name}}</td> <td>{{email}}</td><td><a href="/user/{{id}}/form" class="btn btn-success" role="button">수정</a></td>
+                    <th scope="row">{{id}}</th> <td>{{userId}}</td> <td>{{name}}</td> <td>{{email}}</td><td><a href="/user/{{id}}/form" class="btn btn-success" role="button">수정</a></td>
                 </tr>
                 {{/userList}}
               </tbody>
