--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -8,30 +8,30 @@
 <div class="container" id="main">
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
-      	{{#user}}
+      	{{#updateUser}}
           <form name="question" method="post" action="/user/update">
-          	<input type="hidden" name="id" value="{{user.id}}">
+          	<input type="hidden" name="id" value="{{id}}">
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
-                  <input class="form-control" id="userId" name="userId" value="{{user.userId}}" placeholder="User ID">
+                  <input class="form-control" id="userId" name="userId" value="{{userId}}" placeholder="User ID">
               </div>
               <div class="form-group">
                   <label for="password">비밀번호</label>
-                  <input type="password" class="form-control" id="password" name="password" value="{{user.password}}" placeholder="Password">
+                  <input type="password" class="form-control" id="password" name="password" placeholder="Password">
               </div>
               <div class="form-group">
                   <label for="name">이름</label>
-                  <input class="form-control" id="name" name="name" value="{{user.name}}" placeholder="Name">
+                  <input class="form-control" id="name" name="name" value="{{name}}" placeholder="Name">
               </div>
               <div class="form-group">
                   <label for="email">이메일</label>
-                  <input type="email" class="form-control" id="email" name="email" value="{{user.email}}" placeholder="Email">
+                  <input type="email" class="form-control" id="email" name="email" value="{{email}}" placeholder="Email">
               </div>
               <button type="submit" class="btn btn-success clearfix pull-right">수정</button>
               <div class="clearfix" />
           </form>
-          {{/user}}
-          {{^user}}
+          {{/updateUser}}
+          {{^updateUser}}
           <form name="question" method="post" action="/user/create">
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
@@ -52,7 +52,7 @@
               <button type="submit" class="btn btn-success clearfix pull-right">확인</button>
               <div class="clearfix" />
           </form>
-          {{/user}}
+          {{/updateUser}}
         </div>
     </div>
 </div>
