--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,12 +15,12 @@
                   <div class="wrap">
                       <div class="main">
                           <strong class="subject">
-                              <a href="qna/contents/{{id}}">{{title}}</a>
+                              <a href="/qna/contents/{{id}}">{{title}}</a>
                           </strong>
                           <div class="auth-info">
                               <i class="icon-add-comment"></i>
                               <span class="time">{{writeDate}}</span>
-                              <a href="./user/profile.html" class="author">{{writer.name}}</a>
+                              <a href="/user/{{writer.id}}" class="author">{{writer.name}}</a>
                           </div>
                           <div class="reply" title="댓글">
                               <i class="icon-reply"></i>
@@ -45,7 +45,7 @@
                 </ul>
               </div>
               <div class="col-md-3 qna-write">
-                  <a href="./qna/form.html" class="btn btn-primary pull-right" role="button">질문하기</a>
+                  <a href="/qna/new" class="btn btn-primary pull-right" role="button">질문하기</a>
               </div>
           </div>
         </div>
