--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -9,8 +9,7 @@
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
       	{{#updateUser}}
-          <form name="question" method="post" action="/user/update">
-          	<input type="hidden" name="id" value="{{id}}">
+          <form name="question" method="post" action="/user/{{id}}">
           	<input type="hidden" name="_method" value="put">
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
@@ -33,7 +32,7 @@
           </form>
           {{/updateUser}}
           {{^updateUser}}
-          <form name="question" method="post" action="/user/create">
+          <form name="question" method="post" action="/user/">
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
                   <input class="form-control" id="userId" name="userId" placeholder="User ID">
